# privacy-filter-test

./: .gitignore  README.md  pyproject.toml
docs/: report.md
scripts/: compare.sh  download.py  download.sh  fetch.sh  test_latency.sh
src/: compare.py  crosswalk.py  device.py  latency.py  metrics.py
src/datasets/: __init__.py  ai4privacy_400k.py  gretel_finance.py  peoples_daily.py  synth_zh.py
src/systems/: __init__.py  ai4privacy.py  bert4ner_zh.py  openai_pf.py  presidio_en.py  presidio_zh.py
