[project]
name = "privacy-filter-test"
version = "0.1.0"
description = "Benchmark OpenAI privacy-filter vs Presidio + AI4Privacy on English and Chinese PII."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.46",
    "datasets>=3.0",
    "accelerate>=1.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7",
    "numpy>=1.26",
    "tqdm>=4.66",
    "huggingface-hub>=0.25",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
