[project]
name = "privacy-filter-test"
version = "0.1.0"
description = "Benchmark OpenAI privacy-filter vs Presidio + AI4Privacy on English and Chinese PII."
requires-python = ">=3.10"
# torch upper-bounded below 2.7 so uv resolves cu124 wheels, which work with
# NVIDIA drivers reporting CUDA 12.4+ (matches the qwen3guard-test 3090 box).
# torch 2.7+ ships cu126, 2.8+ ships cu128 — both need newer drivers.
dependencies = [
    "torch>=2.5,<2.7",
    "transformers>=4.46",
    "datasets>=3.0",
    "accelerate>=1.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7",
    "numpy>=1.26",
    "tqdm>=4.66",
    "huggingface-hub>=0.25",
    "en_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "zh_core_web_lg @ https://github.com/explosion/spacy-models/releases/download/zh_core_web_lg-3.8.0/zh_core_web_lg-3.8.0-py3-none-any.whl",
]

[project.optional-dependencies]
dev = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]
